# RESTful/docs/swagger.yaml
@@ -75,6 +75,15 @@ paths:
       - todo
     get:
       description: Get todo list
+      parameters:
+      - description: Page size (Default 10)
+        in: query
+        name: pageSize
+        type: integer
+      - description: Page number (Default 1)
+        in: query
+        name: pageNumber
+        type: integer
       produces:
       - application/json
       responses:
